# MOPSO

./: CMakeLists.txt  MOPSO.h  MOPSOAidFunction.cpp  MOPSOFunction.cpp  Makefile  MakefileNote.txt  QUACKout.txt  README.md  coordinaryTransform.cpp  environmentNote.txt~  fileDisposal.cpp  initialization.cpp  main.cpp  matrixFunction.cpp  parameterSettings.cpp
